fix: collapse borders on home table for underline

--- a/assets/style.css
+++ b/assets/style.css
@@ -131,6 +131,7 @@ a {
 }
 
 table.home {
+    border-collapse: collapse;
     tr td:nth-child(2) {
         text-align: right;
     }
